--- a/shop/static/css/base.css
+++ b/shop/static/css/base.css
@@ -1,5 +1,7 @@
 @import url(//fonts.googleapis.com/css?family=Ubuntu);
 
+
+
 .shop_name {margin-top: 30px;
             margin-left: 120px;}
 
@@ -362,3 +364,41 @@ form div.field {
     color:#666;
     border-radius:4px;
 }
+
+.d1 form {
+    position: relative;
+    width: 70%;
+    height: 1px;
+    float: left;
+    background-color:#0bc0b1;
+    border: none;
+    box-shadow: none;
+  }
+
+  .d1 input {
+    width: 100%;
+    height: 42px;
+    border: 2px solid #7BA7AB;
+    border-radius: 5px;
+    outline: none;
+    background: #F9F0DA;
+    color: #9E9C9C;
+  }
+  .d1 button {
+    position: absolute; 
+    top: 6px;
+    right: 0px;
+    width: 42px;
+    height: 36px;
+    border: none;
+    background: #7BA7AB;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+  }
+
+  .d1 button:before {
+    content: "\f002";
+    font-family: FontAwesome;
+    font-size: 16px;
+    color: #F9F0DA;
+  }
