--- a/shop/static/css/base.css
+++ b/shop/static/css/base.css
@@ -365,40 +365,48 @@ form div.field {
     border-radius:4px;
 }
 
-.d1 form {
-    position: relative;
-    width: 70%;
-    height: 1px;
-    float: left;
-    background-color:#0bc0b1;
-    border: none;
-    box-shadow: none;
+.kn form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 50px;
   }
-
-  .d1 input {
-    width: 100%;
-    height: 42px;
-    border: 2px solid #7BA7AB;
+  
+  .kn input[type="text"] {
+    width: 300px;
+    height: 30px;
+    font-size: 50px;
+    border: 1px solid #ccc;
     border-radius: 5px;
-    outline: none;
-    background: #F9F0DA;
-    color: #9E9C9C;
+    padding: 5px;
+    margin-right: 10px;
   }
-  .d1 button {
-    position: absolute; 
-    top: 6px;
-    right: 0px;
-    width: 42px;
-    height: 36px;
+  
+  .kn button[type="submit"] {
+    height: 50px;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #cfcdca;
+    color: #fff;
     border: none;
-    background: #7BA7AB;
-    border-radius: 0 5px 5px 0;
+    border-radius: 5px;
     cursor: pointer;
   }
+ 
+  .product-search .item {
+    width:28%;
+    height:270px;
+    padding:5px 5px 5px 5px;
+    float:left;
+    text-align:center;
+    line-height:1.2;
+    margin: 20px ;
+    border-style: groove;
+    border-width: 5px;}
 
-  .d1 button:before {
-    content: "\f002";
-    font-family: FontAwesome;
-    font-size: 16px;
-    color: #F9F0DA;
-  }
+    .product-search .item img {
+        width:65%;
+        height:200px;
+        margin-bottom:8px;
+    }
