--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'shop/base.html' %}
 
 {% block content %}
   <h1>Це сторінка магазину</h1>
-  <p>Вітаємо на нашому сайті!</p>
+  <p>Вітаємо на нашому сайті, для того аби перейти для перегляду товарів натисніть <a href="base.html" >На головну</a></p>
 {% endblock %}
