--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -1,17 +1,17 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}AromaDay{% endblock title %}</title>
+    <title>AromaDay — свічки для вашого затишку</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
     <div id="header">
-        <a href="/" class="logo"> <img align="left" src="https://img.freepik.com/premium-vector/candle-with-flowers-hand-drawn-vector-burning-candle-sketch-isolated-white-background_439591-702.jpg" widht="119" height="110"><h1 class="shop_name">AromaDay</h1></a> 
+        <a href="/" class="logo"> <img align="left" src="https://img.freepik.com/premium-vector/candle-with-flowers-hand-drawn-vector-burning-candle-sketch-isolated-white-background_439591-702.jpg" widht="119" height="110"><h1 class="shop_name">AromaDay</h1></a><p class="op">— ми створюємо затишок!</p>
     </div>
     <div id="subheader">
         <div class="cart">
@@ -44,6 +44,7 @@
         </div>
         <div class="right-col">
             <p><a href="https://www.google.com/maps/place/%D0%A5%D0%B0%D1%80%D1%8C%D0%BA%D0%BE%D0%B2,+%D0%A5%D0%B0%D1%80%D1%8C%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@49.994507,36.145742,11z/data=!3m1!4b1!4m6!3m5!1s0x4127a09f63ab0f8b:0x2d4c18681aa4be0a!8m2!3d49.9935!4d36.230383!16zL20vMDgyc3k5?hl=ru"> <img src="https://vsememy.ru/kartinki/wp-content/uploads/2023/03/1642312904_3-papik-pro-p-geolokatsiya-klipart-3.png" width="30" height="25"> Харків, Україна</a></p>
+            <p><a href="https://www.instagram.com/"> <img src="https://cdn-icons-png.flaticon.com/512/1936/1936319.png" width="30" height="25"></a> <a href="https://www.facebook.com/"> <img src="https://cdn-icons-png.flaticon.com/512/59/59439.png" width="30" height="25"></a> <a href="https://www.facebook.com/"> <a href="https://www.telegram.org/"> <img src="https://cdn-icons-png.flaticon.com/512/87/87413.png" width="30" height="25"></a></p>
         </div>
     </div>
 </body>
