--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="header">
-        <a href="/" class="logo"> <img align="left" src="https://img.freepik.com/premium-vector/candle-with-flowers-hand-drawn-vector-burning-candle-sketch-isolated-white-background_439591-702.jpg" widht="119" height="110"><h1 class="shop_name">AromaDay</h1></a><p class="op">— ми створюємо затишок!</p>
+        <a href="/" class="logo"> <img align="left" src="https://img.freepik.com/premium-vector/candle-with-flowers-hand-drawn-vector-burning-candle-sketch-isolated-white-background_439591-702.jpg" widht="119" height="110"><h1 class="shop_name">AromaDay</h1></a>
     </div>
     <div id="subheader">
         <div class="cart">
