--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,4 +1,4 @@
-{% extends "/base.html" %}
+{% extends "shop/base.html" %}
 
 {% block content %}
      <p>Вітаємо на нашому сайті, для перегляду товарів натисніть<a href="/">На головну</a></p>
