--- a/shop/static/css/base.css
+++ b/shop/static/css/base.css
@@ -1,4 +1,6 @@
 @import url(//fonts.googleapis.com/css?family=Ubuntu);
+ 
+@media (max-width: 500px){
 
 .shop_name {margin-top: 30px;
             margin-left: 120px;}
@@ -421,4 +423,4 @@ form div.field {
         width:65%;
         height:200px;
         margin-bottom:1px;
-    }
+    }}
