--- a/shop/static/css/base.css
+++ b/shop/static/css/base.css
@@ -1,6 +1,4 @@
 @import url(//fonts.googleapis.com/css?family=Ubuntu);
- 
-@media (max-width: 500px){
 
 .shop_name {margin-top: 30px;
             margin-left: 120px;}
@@ -423,4 +421,4 @@ form div.field {
         width:65%;
         height:200px;
         margin-bottom:1px;
-    }}
+    }
